Fix unavailable method use